# dbt-dagster-branched-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: dev_testing.yml  prod_deployment.yml  prod_testing.yml
data/raw/: game_a_events.jsonl  game_b_events.jsonl
dbt_dagster_pipeline/: .sqlfluff.txt  .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_dagster_pipeline/macros/: generate_schema_name.sql  macros.yml  surrogate_key.sql
dbt_dagster_pipeline/models/: models.yml  sources.yml
dbt_dagster_pipeline/models/marts/: _marts__models.yml  fct_player_activity.sql  fct_player_activity_incremental.sql
dbt_dagster_pipeline/models/staging/: _sources.yml  stg_game_a_events.sql  stg_game_b_events.sql
dbt_dagster_pipeline/tests/: assert_player_key_has_unique_name.sql  assert_player_progress_within_reasonable_session_limit.sql  assert_timestamps_are_not_in_the_future.sql  test_is_lowercase.sql  test_is_positive.sql  tests.yml
orchestration/: definitions.py  ingest.py
scripts/: generate_sample_data.py  setup-env.ps1  validate-all.ps1  validate-job1.ps1  validate-job2.ps1  validate_dbt.py  validation.yml
