[project]
name = "dbt-dagster-branched-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.13.10",
    "dbt-bigquery>=1.11.2",
    "dbt-core>=1.11.11",
    "duckdb>=1.5.4",
    "pip>=26.1.2",
]

[tool.dagster]
module_name = "orchestration.definitions"
code_location_name = "dbt-dagster-branched-pipeline"